# praxeology

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.ja.md  QUICKSTART.ko.md  QUICKSTART.md  QUICKSTART.zh.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  ROLE-DESIGN.md  ROLE-DESIGN.zh.md  RULES.md  pyproject.toml  setup.sh  tool-bindings.yaml
assets/: banner-3d-de.html  banner-3d-es.html  banner-3d-fr.html  banner-3d-ja.html  banner-3d-ko.html  banner-3d-zh.html  banner-3d.html
crew/: brook.ko.md  brook.md  chopper.ko.md  chopper.md  franky.ko.md  franky.md  jinbe.ko.md  jinbe.md  nami.ko.md  nami.md  robin.ko.md  robin.md  sanji.ko.md  sanji.md  usopp.ko.md  usopp.md  zoro.ko.md  zoro.md
docs/: architecture.md  claude-code-setup.md  cli-reference.md  crew-manager.md  crew-system.md  discord-integration.md  drive-integration.md  getting-started.md  quickstart.de.md  quickstart.es.md  quickstart.fr.md  quickstart.ja.md  quickstart.ko.md  quickstart.md  quickstart.zh.md  role-design.de.md  role-design.es.md  role-design.fr.md  role-design.ja.md  role-design.ko.md  role-design.md  standard-system.md  tutorial.md  work-cycle.md
docs/philosophy/: neeroger-blueprint.md
docs/vision/: 01_PRD.md  02_SDS.md  03_Schema.md  04_Engineering_Plan.md  06_Critical_Evaluation.md  (+1 more)
praxeology_mcp/: __main__.py  agent_runner.py  cli.py  cross.py  daemon.py  db.py  heartbeat.py  metrics.py  server.py
templates/: CLAUDE.template.md  SESSION.md  TASKS.md
tests/: onboard_test_example.md  test_e2e.py
(+40 files in other folders)
